plugins {
    id 'java'
    id 'org.sonarqube' version '3.4.0.2513'
}

group 'org.serverless.oqu.kerek'
version '0.1.0'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

dependencies {
    implementation platform('software.amazon.awssdk:bom:2.17.267')
    implementation 'software.amazon.awssdk:sqs'
    implementation 'software.amazon.awssdk:ses'
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:dynamodb'

    implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
    implementation 'com.amazonaws:aws-lambda-java-events:3.11.0'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'com.itextpdf:itext7-core:7.2.3'
    implementation 'jakarta.mail:jakarta.mail-api:2.1.0'
    runtimeOnly 'com.amazonaws:aws-lambda-java-log4j2:1.5.1'
    compileOnly 'org.projectlombok:lombok:1.18.24'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'

    annotationProcessor 'org.projectlombok:lombok:1.18.24'
}

test {
    useJUnitPlatform()
}

task buildZip(type: Zip) {
    from compileJava
    from processResources
    into('lib') {
        from configurations.runtimeClasspath
    }
}

sonarqube {
    properties {
        property 'sonar.projectKey', 'Dauren-Delmukhambetov_congenial-garbanzo'
        property 'sonar.organization', 'dauren-delmukhambetov'
        property 'sonar.host.url', 'https://sonarcloud.io'
    }
}
